fix translation on settings ui (#675)

--- a/webapp/src/translations/languages/fr.json
+++ b/webapp/src/translations/languages/fr.json
@@ -496,7 +496,7 @@
       "general": "Général",
       "display": "Affichage",
       "launchOptions": "Lancement des options",
-      "reindexOption": "ReIndex Option",
+      "reindexOption": "ReIndex option",
       "reindexAfterSaving": "Reindex after saving",
       "launchAtLogin": "Lancement au démarage",
       "minimizedAtLaunch": "Minimisé au démarage",
