Feature/hide consolidate utxos (#660)
* Add new design for settings page

* Implement count functionalit on all pages

* Added keys and values in translation files

* Modified condition

* Fix typo and hide security tab

* Add values in translation

--- a/webapp/src/translations/languages/de.json
+++ b/webapp/src/translations/languages/de.json
@@ -588,6 +588,20 @@
       "minute": "%{time} Minute",
       "minutes": "%{time} Minuten",
       "years": "%{time} Jahre",
+      "showAdvanceOptions": "Show advance options",
+      "hideAdvanceOptions": "Hide advance options",
+      "sendCountdown": "Send countdown",
+      "preventAccidental": "Prevent accidental sending with a countdown",
+      "ShowWalletRepair": "Wallet Reparatur-Optionen anzeigen",
+      "hidewalletHelper": "Optionen für Wallet-Hilfe ausblenden",
+      "preFundTxns": "TXNS vorfinanzieren",
+      "preFundTxnsDescription": "Se ndet 0,1 DFI zu jeder Adresse, die du besitzt, um diese für zukünftige Transaktionen, welche DFI benötigen, vorzufinanzieren.",
+      "reindex": "REINDEX",
+      "reindexDescription": "Baut die Blockchain-Datenbank aus vorhandenen Blockdaten neu auf, wenn Blockdaten beschädigt sind oder nicht gelesen werden können.",
+      "lockWithPassphrase": "Mit Passwort sperren",
+      "passpharaseInfo": "Sichere deine Wallet Daten auf deinem Computer mit einem Passwort.",
+      "resetAndReindex": "RESET & REINDEX",
+      "resetAndReindexInfo": "Löscht bestehende Peers und Blockdaten, lädt die Daten neu herunter und indiziert diese dann neu (baut die Blockchain-Datenbank neu auf).",
       "autoLockMNWarning": "Die automatische Sperre ist deaktiviert, wenn ein oder mehrere Masternode(s) auf deinem Wallet aktiv sind."
     },
     "wallet": {
