Added block reward in transaction (#715)

--- a/webapp/src/translations/languages/en.json
+++ b/webapp/src/translations/languages/en.json
@@ -794,7 +794,8 @@
         "max": "Max",
         "transaction": "transactions",
         "format": "Format",
-        "csv": "CSV"
+        "csv": "CSV",
+        "blockReward": "Block reward"
       },
       "walletWalletsPage": {
         "walletWallets": "Wallets",
