--- a/webapp/src/translations/languages/nl.json
+++ b/webapp/src/translations/languages/nl.json
@@ -495,7 +495,8 @@
         "includeRewards": "Include reward transactions",
         "transaction": "transactions",
         "format": "Format",
-        "csv": "CSV"
+        "csv": "CSV",
+        "blockReward": "Block reward"
       },
       "walletTokensPage": {
         "walletTokens": "Wallet – Tokens",
