--- a/webapp/src/translations/languages/ru.json
+++ b/webapp/src/translations/languages/ru.json
@@ -502,7 +502,8 @@
         "transaction": "transactions",
         "format": "Format",
         "csv": "CSV",
-        "includeRewards": "Include reward transactions"
+        "includeRewards": "Include reward transactions",
+        "blockReward": "Block reward"
       },
       "walletWalletsPage": {
         "walletWallets": "Кошельки",
