--- a/webapp/src/translations/languages/de.json
+++ b/webapp/src/translations/languages/de.json
@@ -781,7 +781,8 @@
         "max": "Max",
         "transaction": "transaktionen",
         "format": "Format",
-        "csv": "CSV"
+        "csv": "CSV",
+        "blockReward": "Block Belohnung"
       },
       "walletWalletsPage": {
         "walletWallets": "Wallets",
