Fix/security settings (#685)
* WIP

* Add notification and savings of security using save settings button

* refactor walletDropdown component

* cleanup

* Refactor code, add separated mapdispatchToProps and mapStateToProps for securitySettings component

* Update notfication format

* Refactor code use hooks useSelector and useDispatch

--- a/webapp/src/translations/languages/en.json
+++ b/webapp/src/translations/languages/en.json
@@ -883,6 +883,8 @@
     "nodeDisconnected": "Node is disconnected",
     "electronRequiredError": "Electron app is needed for restart",
     "addressIsNotAPartOfWallet": "%{addressName} is not a part of wallet.",
+    "timeoutMessage": "Timeout updated to %{timeout} seconds",
+    "timeoutTitle": "Update Auto-lock Time",
     "updateAppNoticeTitle": "Update complete",
     "updateAppNotice": "You need to restart DeFi Wallet to apply new update. Do you want to restart?",
     "restartNowNotice": "Restart now",
