feat: snapshot download  (#713)
* fix: fixes for MN page

* feat: restructured defi configuration

* feat: off configs on exit wallet

* feat: display lock screen for MNs

* feat: unlock for max timeout

* feat: lock wallet warning

* feat: last changes for MN

* style: codacy fix

* feat: community wiki on help page

* merge

* feat: added warning on installer folder

* chore: added condition for mac

* chore: sample build for testing

* feat: add folder

* chore: style issue

* chore: revert changes

* feat: initial changes

* feat: second snapshot download

* feat: download snapshots

* feat: ui display

* feat: 7zip extract

* feat: snapshot updates

* feat: remove binary path

* feat: update zip path

* feat: relaunch app

* feat: exit app

* feat: move download

* feat: added remove

* feat: disable reindex popup

* feat: snapshot changes

* feat: snapshot close

* chore: remove branch build

* fix: alignment for sync status

* fix: codacy errors

* fix: codacy

--- a/webapp/src/translations/languages/de.json
+++ b/webapp/src/translations/languages/de.json
@@ -883,7 +883,7 @@
     "minimizeBtnLabel": "Minimieren",
     "downloadingUpdate": "Update herunterladen",
     "reindexModelHeader": "Fehler aufgetreten",
-    "restartAppWithReindexNotice": "Beschädigte Block-Datenbank entdeckt. Bitte starte zur Wiederherstellung mit -reindex oder -reindex-chainstate neu. Möchtest Du neu starten?",
+    "restartAppWithReindexNotice": "Korrupte Blockdatenbank erkannt. Du kannst die App über Node-Synchronisation oder Snapshot-Download neu starten. Möchtest du neu starten?",
     "yesRestartAppWithReindex": "App neu starten",
     "noCloseApp": "App schließen",
     "backupWalletNoticeTitle": "Wallet wiederherstellen",
@@ -935,7 +935,26 @@
     "walletBackupWarning": "Verschlüsselung der Wallet erfolgreich. Bitte erstelle sofort ein Backup deiner Wallet. Möchtest du fortfahren?",
     "nodeVersionUpdate": "Node wurde auf Version %{version} upgedatet. Ein App Reindex ist erforderlich. Möchtest du jetzt neu starten?",
     "nodeVersionHeader": "Node update",
-    "masternodesAlert": "Du betreibst derzeit einen Masternode. Das Minten wird auf einer gesperrten Wallet nicht funktionieren. Möchtest du trotzdem fortfahren?"
+    "masternodesAlert": "Du betreibst derzeit einen Masternode. Das Minten wird auf einer gesperrten Wallet nicht funktionieren. Möchtest du trotzdem fortfahren?",
+    "downloadSnapshot": "Download snapshot",
+    "syncNode": "Sync Node",
+    "snapshot": "Snapshot",
+    "snapshotSyncRecommended": "Snapshot Synchronisation empfohlen",
+    "downloadingSnapshot": "Snapshot wird heruntergeladen",
+    "snapshotDescription": "Da die Blockchain von Beginn an synchronisiert wird, kann die Synchronisation bis zu 5 Stunden in Anspruch nehmen, um alle Blockchain Daten über die Peer-Nodes herunterzuladen. Es wird empfohlen, einen offiziellen Blockchain Snapshot zu verwenden, um den Synchronisationsprozess zu beschleunigen.",
+    "snapshotDate": "Datum des Snapshots:",
+    "snapshotProvider": "Snapshot Anbieter:",
+    "snapshotUrl": "Snapshot URL:",
+    "afterDownload": "Nachdem der Snapshot heruntergeladen wurde, wird dieser aus Sicherheitsgründen von dem Node verifiziert, bevor er verwendet wird. Wenn der Snapshot benutzt wurde wird der Node neu gestartet. Im Falle eines ungültigen Snapshots schlägt die Snapshot-Synchronisation fehl und die App greift auf eine vollständige Synchronisation zurück.",
+    "continueWithSnapshot": "WEITER MIT SNAPSHOT",
+    "downloading": "herunterladen",
+    "applyingSnapshot": "Snapshot wird angewendet",
+    "unpackingSnaphot": "Snapshot wird ausgepackt von %{address}",
+    "verifyingSnapshot": "Snapshot wird verifiziert...",
+    "installingSnapshot": "Snapshot wird installiert...",
+    "snapshotApplied": "Snapshot wurde angewendet",
+    "startSyncBlock": "DeFi App wird die Synchronisation nun von Block %{from} starten.",
+    "pleaseWait": "Bitte warte..."
   },
   "general": {
     "defiApp": "DeFi Wallet",
