--- a/webapp/src/translations/languages/en.json
+++ b/webapp/src/translations/languages/en.json
@@ -898,7 +898,7 @@
     "minimizeBtnLabel": "Minimize",
     "downloadingUpdate": "Downloading update",
     "reindexModelHeader": "Error occurred",
-    "restartAppWithReindexNotice": "Corrupted block database detected. Please restart with -reindex or -reindex-chainstate to recover. Do you want to restart?",
+    "restartAppWithReindexNotice": "Corrupted block database detected. You can restart app via node sync or snapshot download. Do you want to restart?",
     "yesRestartAppWithReindex": "Restart app",
     "noCloseApp": "Quit app",
     "backupWalletNoticeTitle": "Backup wallet",
@@ -950,7 +950,28 @@
     "walletBackupWarning": "Wallet has been encrypted successfully. Please backup your wallet immediately. Do you want to proceed?",
     "nodeVersionUpdate": "The node has been updated to version %{version}. A restart is required for re-indexing and changes to take effect. Do you want to restart now?",
     "nodeVersionHeader": "Node update",
-    "masternodesAlert": "You are currently running a masternode. Minting will not work on a locked wallet. Do you want to proceed?"
+    "masternodesAlert": "You are currently running a masternode. Minting will not work on a locked wallet. Do you want to proceed?",
+    "downloadSnapshot": "Download snapshot",
+    "syncNode": "Sync Node",
+    "snapshot": "Snapshot",
+    "snapshotSyncRecommended": "Snapshot sync recommended",
+    "downloadingSnapshot": "Downloading snapshot",
+    "snapshotDescription": "As you are synchronizing with the blockchain from scratch, it may take up to 5 hours to download all blockchain data from peer nodes. It is recommended that you use an official blockchain snapshot to speed up the synchronization process.",
+    "snapshotDate": "Snapshot date:",
+    "snapshotProvider": "Snapshot provider:",
+    "snapshotUrl": "Snapshot URL:",
+    "afterDownload": "After downloading, the snapshot will be verified by the node before it is applied, for security purposes. The node will restart once the snapshot has been applied. In the event of an invalid snapshot, snapshot synchronization will fail, and the app will fall back to a full sync.",
+    "continueWithSnapshot": "CONTINUE WITH SNAPSHOT",
+    "downloading": "Downloading",
+    "applyingSnapshot": "Applying snapshot",
+    "unpackingSnaphot": "Unpacking snapshot from %{address}",
+    "verifyingSnapshot": "Verifying snapshot...",
+    "installingSnapshot": "Installing snapshot...",
+    "snapshotApplied": "Snapshot applied",
+    "startSyncBlock": "DeFi Wallet will now start synchronizing at block %{from}.",
+    "pleaseWait": "Please wait...",
+    "snapshotSize": "Snapshot size:",
+    "snapshotDirectory": "Snapshot directory:"
   },
   "general": {
     "defiApp": "DeFi Wallet",
