feat: label updates (#730)
* feat: label updates

* feat: update german translations

--- a/webapp/src/translations/languages/de.json
+++ b/webapp/src/translations/languages/de.json
@@ -588,8 +588,8 @@
       "minute": "%{time} Minute",
       "minutes": "%{time} Minuten",
       "years": "%{time} Jahre",
-      "showAdvanceOptions": "Show advance options",
-      "hideAdvanceOptions": "Hide advance options",
+      "showAdvanceOptions": "Erweiterte Einstellungen anzeigen",
+      "hideAdvanceOptions": "Erweiterte Einstellungen verstecken",
       "sendCountdown": "Send countdown",
       "preventAccidental": "Prevent accidental sending with a countdown",
       "ShowWalletRepair": "Wallet Reparatur-Optionen anzeigen",
