feature: consolidated txn page (#759)
* Add txsn state in foot files

* Add transaction route and path

* Implements reducer saga service types and transaction page

* Implements transaction list page and csv export component

* Made token dropdown component

* Implement sendPage

* Remove unused code

* fix : error

* Made improvements and removed unused code

* feat: transactions and label updates

* fix: codacy issues

* fix: codacy

Co-authored-by: Saurabh Shinde <saurabhshinde391@gmail.com>

--- a/webapp/src/translations/languages/en.json
+++ b/webapp/src/translations/languages/en.json
@@ -43,7 +43,8 @@
       "settings": "Settings",
       "console": "Console",
       "liquidity": "Liquidity",
-      "selectCreateRestore": "Select, create or restore a wallet to access wallet functions"
+      "selectCreateRestore": "Select, create or restore a wallet to access wallet functions",
+      "transactions": "Transactions"
     },
     "blockChainPage": {
       "blockChainPage": {
@@ -597,7 +598,7 @@
       "hideAdvanceOptions": "Hide advance options",
       "sendCountdown": "Send countdown",
       "preventAccidental": "Prevent accidental sending with a countdown",
-      "ShowWalletRepair": "Show wallet repair options",
+      "ShowWalletRepair": "Show wallet helper options",
       "hidewalletHelper": "Hide wallet helper options",
       "preFundTxns": "PRE-FUND TXNS",
       "preFundTxnsDescription": "Sends 0.1 DFI to every address you own to pre-fund future transactions which require DFI.",
@@ -836,6 +837,15 @@
       },
       "unlockWalletPage": {
         "title": "Unlock wallet"
+      }
+    },
+    "transaction": {
+      "transactionPage": {
+        "transactions": "Transactions",
+        "filterByAsset": "Filter by asset",
+        "all": "All",
+        "includeRewards": "Include rewards",
+        "allAssets": "All assets"
       }
     },
     "console": {
