--- a/webapp/src/translations/languages/de.json
+++ b/webapp/src/translations/languages/de.json
@@ -590,12 +590,12 @@
       "years": "%{time} Jahre",
       "showAdvanceOptions": "Erweiterte Einstellungen anzeigen",
       "hideAdvanceOptions": "Erweiterte Einstellungen verstecken",
-      "sendCountdown": "Send countdown",
-      "preventAccidental": "Prevent accidental sending with a countdown",
+      "sendCountdown": "Senden Countdown",
+      "preventAccidental": "Verhindert versehentliches Senden mit einem Countdown",
       "ShowWalletRepair": "Wallet Reparatur-Optionen anzeigen",
-      "hidewalletHelper": "Optionen für Wallet-Hilfe ausblenden",
-      "preFundTxns": "TXNS vorbereiten",
-      "preFundTxnsDescription": "Se ndet 0,1 DFI zu jeder Adresse, die du besitzt, um diese für zukünftige Transaktionen, welche DFI benötigen, vorzufinanzieren.",
+      "hidewalletHelper": "Wallet Reparaturoptionen ausblenden",
+      "preFundTxns": "PRE-FUND TX",
+      "preFundTxnsDescription": "Sendet 0,1 DFI zu jeder Adresse, die du besitzt, um diese für zukünftige Transaktionen, welche DFI benötigen, vorzufinanzieren.",
       "reindex": "REINDEX",
       "reindexDescription": "Baut die Blockchain-Datenbank aus vorhandenen Blockdaten neu auf, wenn Blockdaten beschädigt sind oder nicht gelesen werden können.",
       "lockWithPassphrase": "Mit Passwort sperren",
