feat: add defichain analytics site to DEX (#792)
* feat: add analytics url

* feat: added defi analytics

* chore: german

* feat: defichain analytics

--- a/webapp/src/translations/languages/de.json
+++ b/webapp/src/translations/languages/de.json
@@ -437,7 +437,9 @@
         "tokensTransferred": "Token übertragen",
         "dexExplorer": "Dex Explorer",
         "insufficientUtxos": "Unzureichendes UTXOS für den Swap",
-        "backToDEX": "Zurück zu DEX"
+        "backToDEX": "Zurück zu DEX",
+        "defichainAnalytics": "Weitere Einblicke gibt es bei der von der Community gepflegten:",
+        "url": "DeFiChain Analytics"
       },
       "swapTab": {
         "from": "Von",
