feat: BTC SPV wallet (#779)
* feat: initial commit for balances

* feat: get spv balance

* feat: add balance poll for SPV

* chore: bump packages

* feat: add token list

* feat: tooltip

* feat: replace DEX icon

* feat: bg and DST badge

* feat: hash BTC SPV Symbol

* chore: bump packages

* feat: send and receive icons

* feat: balance info modal

* feat: receive addresses display

* chore: bump package

* fix: history

* feat: generate receive address

* feat: send BTC

* feat: add validation for receiving address

* chore: bump ts-loader

* feat: balance update

* feat: token list update

* chore: bump

* fix: ui updates

* fix: codacy

* chore: bump

* chore: bump packages

* chore: bump ain

* fix: hide cancel request for SPV

* fix: update popup text

* feat: spv send btc

* chore: bump packages

* fix: error message wrapping

* feat: update node version and snapshot update

* chore: bump packages

* feat: initial commit for display name

* feat: update snapshot to 819745

* chore: bump snapshot 822754

* chore: bump app to 2.3.4-rc.1

* feat: added chinese urls for telegram and url links

* feat: bump block

* feat: bump node to 1.6.4

* chore: bump packages

* chore: updated snapshot to 828899

* feat: retry and delay for send spv

--- a/webapp/src/translations/languages/de.json
+++ b/webapp/src/translations/languages/de.json
@@ -784,7 +784,11 @@
         "transaction": "transaktionen",
         "format": "Format",
         "csv": "CSV",
-        "blockReward": "Block Belohnung"
+        "blockReward": "Block Belohnung",
+        "whatAreTokens": "Was sind Token?",
+        "tokenDescription": "DeFiChain nutzt Token-Standards, um externe Token auf vertrauenswürdiger Weise einzubringen, was vertrauenslose Finanzverträge und den Handel mit allen wichtigen Krypto-Asset-Token ermöglicht. Die Token-Standards sind ähnlich wie ERC20 auf Ethereum oder Omni auf der Bitcoin-Blockchain. Mit diesem Standard ermöglicht DeFiChain die Tokenisierung von beliebigen Assets.",
+        "tokenSub": "Auf der DeFiChain werden die standardisierten Token DeFi Standard Token (DST) genannt. DST-Tokens teilen sich in zwei verschiedene Arten auf: DCT, die von Nutzern des Systems erstellt werden und DAT, bei denen es sich um Token handelt, die gedeckt sind und mit der Unterstützung von Krypto-Assets erstellt werden.",
+        "moreInformation": "Mehr Informationen unter:"
       },
       "walletWalletsPage": {
         "walletWallets": "Wallets",
