--- a/webapp/src/translations/languages/zhs.json
+++ b/webapp/src/translations/languages/zhs.json
@@ -110,6 +110,7 @@
       "helpPageHeader": "联系社区",
       "telegramEn": "电报群 (英)",
       "telegramDe": "电报群 (德)",
+      "telegramZh": "递飞链官方中文电报群",
       "github": "报告问题",
       "faq": "常见问题",
       "defichainsite": "递飞链官方网站",
