--- a/webapp/src/translations/languages/zht.json
+++ b/webapp/src/translations/languages/zht.json
@@ -110,6 +110,7 @@
       "helpPageHeader": "聯繫社區",
       "telegramEn": "電報群 (英)",
       "telegramDe": "電報群 (德)",
+      "telegramZh": "遞飛鏈官方中文電報群",
       "github": "報告問題",
       "faq": "常見問題",
       "defichainsite": "遞飛鏈官方網站",
