chore: bump to 838093 and update app version to 2.3.4 (#826)
* chore: update snapshot 835791

* chore: bump block to 838093

* chore: bump app to 1.3.4

* feat: ui updates

--- a/webapp/src/translations/languages/de.json
+++ b/webapp/src/translations/languages/de.json
@@ -645,7 +645,7 @@
         "verifyMnemonicGuideline": "Um sicherzugehen, dass Du Deinen 24-Wörter-Seed niedergeschrieben hast, wähle bitte 6 der Wörter Deiner Mnemonic Seed-Phrase aus der untenstehenden Liste aus.",
         "verifyMnemonicWhichOne": "Welches ist ...",
         "wordQuestion": "Wort %{wordNum}?",
-        "creatingYourWallet": "Deine Wallet erstellen",
+        "creatingYourWallet": "Deine Wallet wird erstellt",
         "backToWalletPage": "Schließen",
         "skipVerificationTextHeader": "Überspringen auf eigene Gefahr",
         "skipVerificationText": "Bitte vergewissere Dich, dass Du Deinen 24-Wort-Wiederherstellungssatz für die Wiederherstellung der Wallet in der richtigen Reihenfolge aufgeschrieben hast. Ohne Deinen Wallet-Wiederherstellungssatz kannst Du Deine Wallet nicht wiederherstellen.",
